--- a/references.bib
+++ b/references.bib
@@ -59,3 +59,16 @@
 	year={1962},
 	publisher={JSTOR}
 }
+@inproceedings{cui2019class,
+	title={Class-balanced loss based on effective number of samples},
+	author={Cui, Yin and Jia, Menglin and Lin, Tsung-Yi and Song, Yang and Belongie, Serge},
+	booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+	pages={9268--9277},
+	year={2019}
+}
+@article{kang2019decoupling,
+	title={Decoupling representation and classifier for long-tailed recognition},
+	author={Kang, Bingyi and Xie, Saining and Rohrbach, Marcus and Yan, Zhicheng and Gordo, Albert and Feng, Jiashi and Kalantidis, Yannis},
+	journal={arXiv preprint arXiv:1910.09217},
+	year={2019}
+}
